Fix overflow layout on product details page

--- a/app/design/frontend/Magespider/spider/web/css/source/_extend.less
+++ b/app/design/frontend/Magespider/spider/web/css/source/_extend.less
@@ -720,6 +720,7 @@ a.disabled {
 .product-info-main{
 	.product-info-price {
 		display: block;
+		width: 100% !important;
 
 		.product-item-name {
 			font-size: 25px;
@@ -949,4 +950,9 @@ a.disabled {
 /******Checkout Container******/
 .checkout-container {
 	padding: 0 10px;
+}
+
+/*****Fixing overflow product details page******/
+.product.data.items {
+	width: 100%
 }
